--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
 # Godot 4+ specific ignores
 .godot/
+
+# Godot-specific ignores
+.import/
+export.cfg
+export_presets.cfg
+
+# Imported translations
+*.translation
+
+# OS-specific ignores
+*.DS_Store
+Thumbs.db
